# Competitve-Programming

./: A.cpp  CMakeLists.txt  newe.c
.cph/: .A.cpp_9cf7f7ef60e07880e5f9fe4f2792df29.prob  .new.cpp_e3d6f553171be47bc5f9260d15a36fdd.prob
Algorithms/: Kadane_Algo  Kadane_Algo.cpp  Roman_to_int.cpp
Algorithms/.cph/: .Kadane_Algo.cpp_9cb3abed8347dc8a2895cce5a5997525.prob  .Roman_to_int.cpp_23c5deab7a209492ad207c8471b7eeff.prob
Algorithms/BitManipulation/: Count_Set_Bits.cpp  Left_Right_Shift.cpp  Set_Bit.cpp  temp.cpp
Algorithms/BitManipulation/.cph/: .Count_Set_Bits.cpp_f956a3b38253f331f137a434e9042c11.prob  .Left_Right_Shift.cpp_8a04084dff30aba6af62ced6dfd566fe.prob  .Set_Bit.cpp_30ce7dfc7d98ad2f228bfe2081a7bee1.prob  .temp.cpp_3fab97d36974709127575ce7d126a2bf.prob
Algorithms/Graph Theory/: BUFLIFE_SPOJ.cpp  BipartiteGraph.cpp  CSES_1669.cpp  CalculatingSizeOfSubtree.cpp  ConnectedComponentsHE.cpp  DiameterOfTree.cpp  FIRESC.cpp  In_Out_time.cpp  PT07.cpp  SSSP_DFS.cpp
Algorithms/Graph Theory/.cph/: .BUFLIFE_SPOJ.cpp_6b05b1ad1afe472f2b0a11b0ec7d3a33.prob  .BipartiteGraph.cpp_3b4a9df169ba5ad92670607052ecbc60.prob  .CSES_1669.cpp_a004a5fc01e11a90e2c60c79eff66375.prob  .CalculatingSizeOfSubtree.cpp_f0d76874beede2e2bb5b5e25671252cf.prob  .ConnectedComponentsHE.cpp_eb8565f43b4757b1d80ff35f71196ddc.prob  .DiameterOfTree.cpp_cb68245fcbeb4e86f81084f6a22b3174.prob  .FIRESC.cpp_f2bf9f4916e603b1145f37ca72fefc37.prob  .In_Out_time.cpp_99b3b647738159542d4ca94df7b95a6b.prob  .PT07.cpp_ef57cd72f4cb081481012f4ed802170b.prob  .SSSP_DFS.cpp_22a28060e3345e7b337c8644ea2e76e5.prob  .SSSP_DFS.cpp_2810adf3bfc9b15d4de0d67f1a485343.prob
Algorithms/Trees/: Right-LeftViewOfBTree.cpp  SymmetricBtree.cpp  rootToNodePath.cpp
Algorithms/dp/: coinCombination1.cpp  coinCombination1_2d.cpp  coinCombination2.cpp  countSubsetSum.cpp  diceCombination1.cpp  equalSumPartition.cpp  gridPaths.cpp  jumpGame2.cpp  knapsack.cpp  knapsackRec.cpp  knapsackTopDown.cpp  longestCommonSubsequence.cpp  minimizingCoins.cpp  printLCS.cpp  removingDigits.cpp  rodCutting.cpp  subsetSum.cpp  temp.cpp
Algorithms/dp/.cph/: .coinCombination1_2d.cpp_3356d1959c39748d15092da16ac55bfb.prob  .coinCombination2.cpp_6dc4dceccd4699002ad5bf7fbd27c288.prob  .countSubsetSum.cpp_baeb44e8da9a36f3e3c02d626c79760e.prob  .equalSumPartition.cpp_49020cd6fc72e9b8196b7030298b8a36.prob  .jumpGame2.cpp_245e821e8b1b3ca918b5c62bfde31b82.prob  .longestCommonSubsequence.cpp_2bad9c3d4289d655334dc7b986797501.prob  .minimumSubsetSumDifference.cpp_5ad929323ee6d29eba3eff3338b2c982.prob  .printLCS.cpp_00cac2403fd3304ebab9516c70282081.prob  .printLCS.cpp_488fd548d26f4eef8ab65b4cda770882.prob  .printLCS.cpp_e3cf0bd22aa5850198fc7c9bcef0aebc.prob  .removingDigits.cpp_53863571f2fc44b85024f17a19e05f4e.prob  .temp.cpp_8cde29e73a0a4ab15377709cb251b2a8.prob
AtCoder/: A.cpp  B.cpp  C.cpp
AtCoder/.cph/: .A.cpp_3cf950796aa057b6a956fb1946445348.prob  .B.cpp_0328ffb138c5891a106e547dcd466b70.prob  .C.cpp_092c0d0d789e285d478ea044850dc144.prob
AtCoder/Practice/: abc199C.cpp
AtCoder/Practice/.cph/: .abc199C.cpp_cde5918342e6d08518337c0cb905c66c.prob
AtCoder/abc198/: B  C.cpp
AtCoder/abc198/.cph/: .B.cpp_979d75370e343725e2449a0af3229c67.prob  (+1 more)
AtCoder/abc199/: B.cpp
AtCoder/abc200/: B.cpp  C.cpp
AtCoder/abc201/: B  B.cpp  C.cpp
AtCoder/abc202/: A.cpp  B.cpp  C.cpp
AtCoder/abc204/: A.cpp  B.cpp  C  C.cpp
AtCoder/abc206/: A.cpp  B.cpp  C.cpp
AtCoder/abc208/: A.cpp  B.cpp
AtCoder/abc242/: A.cpp  B.cpp  C.cpp  D.cpp
AtCoder/abc243/: A.cpp  B.cpp  C.cpp
AtCoder/abc251/: A.cpp  B.cpp  C.cpp
AtCoder/ark136/: A.cpp  B.cpp
CSES/: missingnum.cpp  weirdalgo.cpp
CSES/.cph/: .missingnum.cpp_08d92924fa5f987db4ba49104593845c.prob  .weirdalgo.cpp_5ecaf84224e6913acc6c6e38ab29183a.prob
CodeChef/: 1638B.cpp  BITSWAPS.cpp  JOHNY.cpp  NOFIX.cpp  PLP.cpp  Police_Recruits.cpp  SMOKE.cpp  STONE.cpp  XORPAL.cpp  centilion.cpp  reverse.cpp  test.cpp
CodeChef/.cph/: .PLP.cpp_579b3da57575d4fd197b03ec275e3f03.prob  .Police_Recruits.cpp_f116b0a846917634b135c8f1e0ca76b4.prob
CodeChef/COOK130/: 1.cpp  2.cpp
CodeChef/COOK131/: A.cpp  B.cpp  C.cpp  D.cpp
CodeChef/COOK138B/: A.cpp  B.cpp  C.cpp  D.cpp  DIV3A.cpp
CodeChef/FEB221B/: BITBLEND.cpp
CodeChef/JUNLONG2021/: problem2.cpp
CodeChef/LTIME100/: B.cpp  C.cpp
CodeChef/LTIME97C/: 1.cpp  2.cpp  3  3.cpp  4.cpp  5.cpp
CodeChef/LTIME98B/: A.cpp  B.cpp  C.cpp
CodeChef/START5C/: 1.cpp  2.cpp  3.cpp  4.cpp  5  5.cpp
CodeChef/start30B/: A.cpp  B.cpp  C.cpp
Codeforces/1706/: A.cpp  B.cpp  C.cpp  info.cpp
Codeforces/Contests/: A.cpp  B.cpp  C  C.cpp
Codeforces/Practice/: 1107C.cpp  115A  115A.cpp  1213B.cpp  1213C.cpp  122A.cpp  1265B.cpp  1272C.cpp  1285B.cpp  1294B.cpp  1294C.cpp  1305B.cpp  1324B.cpp  1324C.cpp  1324D.cpp  1326C.cpp  1327A.cpp  1328B  1328B.cpp  1328C.cpp  1334A.cpp  1335C.cpp  1335D.cpp  1339B.cpp  1341B.cpp  1342A.cpp  1343A.cpp  1343C.cpp  1348B.cpp  1352B  1352B.cpp  1352C.cpp  1352D.cpp  1353C.cpp  1355B.cpp  1360E.cpp  1363A.cpp  1363B.cpp  1365B.cpp  1366A.cpp  (+149 more)
DP/: Fibonacci.cpp  Min_Coins_topdown.cpp  Min_steps_to_one.cpp  Min_steps_to_one_topdown.cpp
DP/.cph/: .Fibonacci.cpp_0b2b2d02d429033fad288a6f154eaba0.prob  .Min_Coins_topdown.cpp_4b50c7a0a224aaaea858568fa098f4df.prob  .Min_steps_to_one.cpp_55b7965dfc27f5f457550736705230e0.prob  .Min_steps_to_one_topdown.cpp_4183a4c831aead5d599bf3b3b9371779.prob
GFG/: removeDuplicatesInSmallPrimeArray.cpp  smallestPositiveMissingNumber.cpp
HackerEarth/: A.cpp  B.cpp
HackerEarth/JUL/: A.cpp
HackerEarth/JuneCircuits/: Simon  Simon.cpp
HackerEarth/MarchCircuit22/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp
HackerEarth/april-easy-22/: A.cpp  B.cpp  C.cpp  F.cpp
LeetCode/: remove-element.cpp
LeetCode/.cph/: .remove-element.cpp_56275f944f0c64b95724aafa1a5342db.prob
Templates/: CP_Template.json  SieveOfEratosthenes.cpp
kickstart/: A.cpp  B.cpp  C.cpp
kickstart/.cph/: .A.cpp_0e44367a9c33b9aa8c3517d6c3701ff5.prob  .B.cpp_95a04586e72859e49ee2dfc4efba7067.prob  .C.cpp_a4a3a5c9d4fb1f9710cb85e10c59d854.prob
(+597 files in other folders)
