cmake_minimum_required(VERSION 3.20)
project(Competitve_Programming)

set(CMAKE_CXX_STANDARD 14)

add_executable(Competitve_Programming
        Algorithms/BitManipulation/Count_Set_Bits.cpp
        Algorithms/BitManipulation/Left_Right_Shift.cpp
        Algorithms/BitManipulation/Set_Bit.cpp
        Algorithms/BitManipulation/temp.cpp
        "Algorithms/Graph Theory/BipartiteGraph.cpp"
        "Algorithms/Graph Theory/BUFLIFE_SPOJ.cpp"
        "Algorithms/Graph Theory/CalculatingSizeOfSubtree.cpp"
        "Algorithms/Graph Theory/ConnectedComponentsHE.cpp"
        "Algorithms/Graph Theory/CSES_1669.cpp"
        "Algorithms/Graph Theory/DiameterOfTree.cpp"
        "Algorithms/Graph Theory/FIRESC.cpp"
        "Algorithms/Graph Theory/In_Out_time.cpp"
        "Algorithms/Graph Theory/PT07.cpp"
        "Algorithms/Graph Theory/SSSP_DFS.cpp"
        Algorithms/Kadane_Algo.cpp
        Algorithms/Roman_to_int.cpp
        AtCoder/abc198/C.cpp
        AtCoder/abc199/B.cpp
        AtCoder/abc199/C.cpp
        AtCoder/abc200/B.cpp
        AtCoder/abc200/C.cpp
        AtCoder/abc201/B.cpp
        AtCoder/abc201/C.cpp
        AtCoder/abc202/A.cpp
        AtCoder/abc202/B.cpp
        AtCoder/abc202/C.cpp
        AtCoder/abc204/A.cpp
        AtCoder/abc204/B.cpp
        AtCoder/abc204/C.cpp
        AtCoder/abc206/A.cpp
        AtCoder/abc206/B.cpp
        AtCoder/abc206/C.cpp
        AtCoder/abc208/A.cpp
        AtCoder/abc208/B.cpp
        AtCoder/abc208/C.cpp
        AtCoder/Practice/abc199C.cpp
        AtCoder/A.cpp
        AtCoder/B.cpp
        AtCoder/C.cpp
        CodeChef/COOK129C/2.cpp
        CodeChef/COOK130/1.cpp
        CodeChef/COOK130/2.cpp
        CodeChef/COOK131/A.cpp
        CodeChef/COOK131/B.cpp
        CodeChef/COOK131/C.cpp
        CodeChef/COOK131/D.cpp
        CodeChef/JUNLONG2021/problem2.cpp
        CodeChef/LTIME97C/1.cpp
        CodeChef/LTIME97C/2.cpp
        CodeChef/LTIME97C/3.cpp
        CodeChef/LTIME97C/4.cpp
        CodeChef/LTIME97C/5.cpp
        CodeChef/LTIME98B/A.cpp
        CodeChef/LTIME98B/B.cpp
        CodeChef/LTIME98B/C.cpp
        CodeChef/START5C/1.cpp
        CodeChef/START5C/2.cpp
        CodeChef/START5C/3.cpp
        CodeChef/START5C/4.cpp
        CodeChef/START5C/5.cpp
        CodeChef/JOHNY.cpp
        CodeChef/Police_Recruits.cpp
        CodeChef/test.cpp
        Codeforces/Contests/1426/A.cpp
        Codeforces/Contests/1426/B.cpp
        Codeforces/Contests/1426/C.cpp
        Codeforces/Contests/1426/tempp.cpp
        Codeforces/Contests/1462/.cpp
        Codeforces/Contests/1462/A.cpp
        Codeforces/Contests/1462/B.cpp
        Codeforces/Contests/1462/C.cpp
        Codeforces/Contests/1504/A.cpp
        Codeforces/Contests/1504/B.cpp
        Codeforces/Contests/1509/A.cpp
        Codeforces/Contests/1509/B.cpp
        Codeforces/Contests/1509/C.cpp
        Codeforces/Contests/1513/A.cpp
        Codeforces/Contests/1513/B.cpp
        Codeforces/Contests/1513/C.cpp
        Codeforces/Contests/1514/A.cpp
        Codeforces/Contests/1514/B.cpp
        Codeforces/Contests/1517/A.cpp
        Codeforces/Contests/1517/B.cpp
        Codeforces/Contests/1519/A.cpp
        Codeforces/Contests/1519/B.cpp
        Codeforces/Contests/1520/A.cpp
        Codeforces/Contests/1520/B.cpp
        Codeforces/Contests/1520/C.cpp
        Codeforces/Contests/1520/D.cpp
        Codeforces/Contests/1525/A.cpp
        Codeforces/Contests/1525/B.cpp
        Codeforces/Contests/1525/C.cpp
        Codeforces/Contests/1527/A.cpp
        Codeforces/Contests/1527/B.cpp
        Codeforces/Contests/1532/A.cpp
        Codeforces/Contests/1532/altB.cpp
        Codeforces/Contests/1532/B.cpp
        Codeforces/Contests/1532/fsdfsd.cp
        Codeforces/Contests/1532/fsdfsd.cpp
        Codeforces/Contests/1534/A.cpp
        Codeforces/Contests/1536/A.cpp
        Codeforces/Contests/1536/B.cpp
        Codeforces/Contests/1536/C.cpp
        Codeforces/Contests/1539/A.cpp
        Codeforces/Contests/1539/B.cpp
        Codeforces/Contests/1539/C.cpp
        Codeforces/Contests/1542/A.cpp
        Codeforces/Contests/1542/B.cpp
        Codeforces/Contests/1542/C.cpp
        Codeforces/Contests/1542/sieve.cpp
        Codeforces/Contests/1543/A.cpp
        Codeforces/Contests/1543/B.cpp
        Codeforces/Contests/1543/temp.cpp
        Codeforces/Contests/1546/A.cpp
        Codeforces/Contests/1546/B.cpp
        Codeforces/Contests/1547/A.cpp
        Codeforces/Contests/1547/B.cpp
        Codeforces/Contests/1547/C.cpp
        Codeforces/Contests/1549/A.cpp
        Codeforces/Contests/1549/B.cpp
        Codeforces/Contests/1549/C.cpp
        Codeforces/Contests/1550/A.cpp
        Codeforces/Contests/1550/B.cpp
        Codeforces/Contests/1551/A.cpp
        Codeforces/Contests/1551/B.cpp
        Codeforces/Contests/1551/C.cpp
        Codeforces/Contests/1552/A.cpp
        Codeforces/Contests/1552/B.cpp
        Codeforces/Contests/1552/C.cpp
        Codeforces/Contests/1553/A.cpp
        Codeforces/Contests/1553/B.cpp
        Codeforces/Contests/1553/test.cpp
        Codeforces/Contests/1554/A.cpp
        Codeforces/Contests/1554/B.cpp
        Codeforces/Contests/1554/C.cpp
        Codeforces/Contests/1555/A.cpp
        Codeforces/Contests/1555/B.cpp
        Codeforces/Contests/1555/C.cpp
        Codeforces/Contests/DIV2-726/A.cpp
        Codeforces/Contests/DIV2-726/B.cpp
        Codeforces/Contests/DIV2-726/C.cpp
        Codeforces/Contests/DIV3-725/A.cpp
        Codeforces/Contests/DIV3-725/B.cpp
        Codeforces/Contests/DIV3-725/C.cpp
        "Codeforces/Contests/Prac#2/A.cpp"
        "Codeforces/Contests/Prac#2/B.cpp"
        "Codeforces/Contests/Prac#2/C.cpp"
        "Codeforces/Contests/vir#1/C.cpp"
        Codeforces/Contests/virtual1454/A.cpp
        Codeforces/Contests/virtual1454/B.cpp
        Codeforces/Contests/virtual1454/C.cpp
        Codeforces/Contests/A.cpp
        Codeforces/Contests/B.cpp
        Codeforces/Contests/C.cpp
        Codeforces/Practice/1107C.cpp
        Codeforces/Practice/115A.cpp
        Codeforces/Practice/1213B.cpp
        Codeforces/Practice/122A.cpp
        Codeforces/Practice/1265B.cpp
        Codeforces/Practice/1285B.cpp
        Codeforces/Practice/1294B.cpp
        Codeforces/Practice/1324B.cpp
        Codeforces/Practice/1324C.cpp
        Codeforces/Practice/1324D.cpp
        Codeforces/Practice/1327A.cpp
        Codeforces/Practice/1328B.cpp
        Codeforces/Practice/1328C.cpp
        Codeforces/Practice/1334A.cpp
        Codeforces/Practice/1335C.cpp
        Codeforces/Practice/1339B.cpp
        Codeforces/Practice/1342A.cpp
        Codeforces/Practice/1343A.cpp
        Codeforces/Practice/1343C.cpp
        Codeforces/Practice/1348B.cpp
        Codeforces/Practice/1352B.cpp
        Codeforces/Practice/1352C.cpp
        Codeforces/Practice/1353C.cpp
        Codeforces/Practice/1360E.cpp
        Codeforces/Practice/1363A.cpp
        Codeforces/Practice/1366A.cpp
        Codeforces/Practice/1367C.cpp
        Codeforces/Practice/1370B.cpp
        Codeforces/Practice/1372B.cpp
        Codeforces/Practice/1374C.cpp
        Codeforces/Practice/1382B.cpp
        Codeforces/Practice/1385C.cpp
        Codeforces/Practice/1399C.cpp
        Codeforces/Practice/1409A.cpp
        Codeforces/Practice/1409B.cpp
        Codeforces/Practice/1433A.cpp
        Codeforces/Practice/1472C.cpp
        Codeforces/Practice/1506B.cpp
        Codeforces/Practice/1509B.cpp
        Codeforces/Practice/1517B.cpp
        Codeforces/Practice/1520D.cpp
        Codeforces/Practice/1535B.cpp
        Codeforces/Practice/1535C.cpp
        Codeforces/Practice/1538B.cpp
        Codeforces/Practice/1549C.cpp
        Codeforces/Practice/1551B1.cpp
        Codeforces/Practice/1551B2.cpp
        Codeforces/Practice/1551C.cpp
        Codeforces/Practice/1552B.cpp
        Codeforces/Practice/1553C.cpp
        Codeforces/Practice/1556B.cpp
        Codeforces/Practice/1557B.cpp
        Codeforces/Practice/1560B.cpp
        Codeforces/Practice/1560C.cpp
        Codeforces/Practice/1560D.cpp
        Codeforces/Practice/1561B.cpp
        Codeforces/Practice/1562B.cpp
        Codeforces/Practice/160A.cpp
        Codeforces/Practice/189A.cpp
        Codeforces/Practice/230ADragons.cpp
        Codeforces/Practice/230B.cpp
        Codeforces/Practice/263A.cpp
        Codeforces/Practice/271A.cpp
        Codeforces/Practice/279B.cpp
        Codeforces/Practice/313B.cpp
        Codeforces/Practice/327A.cpp
        Codeforces/Practice/327AON.cpp
        Codeforces/Practice/330B.cpp
        Codeforces/Practice/339B.cpp
        Codeforces/Practice/349A.cpp
        Codeforces/Practice/43A.cpp
        Codeforces/Practice/451.cpp
        Codeforces/Practice/456A.cpp
        Codeforces/Practice/466A.cpp
        Codeforces/Practice/474B.cpp
        Codeforces/Practice/476A.cpp
        Codeforces/Practice/479C.cpp
        Codeforces/Practice/489B.cpp
        Codeforces/Practice/489C.cpp
        Codeforces/Practice/499B.cpp
        Codeforces/Practice/4C.cpp
        Codeforces/Practice/500A.cpp
        Codeforces/Practice/519B.cpp
        Codeforces/Practice/545D.cpp
        Codeforces/Practice/550A.cpp
        Codeforces/Practice/706B.cpp
        Codeforces/Practice/732A.cpp
        Codeforces/Practice/742A.cpp
        Codeforces/Practice/750A.cpp
        Codeforces/Practice/82A.cpp
        Codeforces/Practice/diversesubstring.cpp
        Codeforces/Practice/dsd.cpp
        Codeforces/Practice/Expression.cpp
        Codeforces/Practice/ilyahouse.cpp
        Codeforces/Practice/IQTest.cpp
        Codeforces/Practice/new.cpp
        Codeforces/Practice/parallelpiped.cpp
        Codeforces/Practice/rfsf.cpp
        Codeforces/Practice/seq.cpp
        Codeforces/Practice/strangebday.cpp
        Codeforces/Practice/tempCodeRunnerFile.cpp
        Codeforces/Practice/test.cpp
        Codeforces/Practice/testt.cpp
        Codeforces/Practice/testtt.cpp
        Codeforces/Practice/Vanya.cpp
        CSES/missingnum.cpp
        CSES/weirdalgo.cpp
        DP/Fibonacci.cpp
        DP/Min_Coins_topdown.cpp
        DP/Min_steps_to_one.cpp
        DP/Min_steps_to_one_topdown.cpp
        HackerEarth/JUL/A.cpp
        HackerEarth/JuneCircuits/Simon.cpp
        HackerEarth/A.cpp
        HackerEarth/B.cpp
        LeetCode/remove-element.cpp
        A.cpp)
